Bug 842726.  Kill off GetterShim and the classinfo support for chrome-only stuff on Document now that we can do that via WebIDL.  r=peterv